--- a/network/스위치와 허브.md
+++ b/network/스위치와 허브.md
@@ -6,14 +6,21 @@
 
 공통점이라고 한다면 **여러 컴퓨터를 연결하여 회선을 공유**할 수 있다는 것입니다. 그러면 이제 차이점에 대해 알아보겠습니다.
 
-## 동작 방식
+## Fowarding 방식
 
-`허브`는 **목적지를 찾지 않고 연결된 모든 포트로 데이터를 전송**합니다. 또한 **한 컴퓨터가 통신중이라면 다른 컴퓨터는 통신하지 못한다**는 단점이 있습니다. 
+`허브`는 **입력된 데이터를 복사하여 들어온 포트를 제외한 연결된 모든 포트로 데이터를 전송**합니다. 즉, 아무 논리 없이 전달합니다.
 
-반면에 `스위치`는 **CAM 테이블에 MAC 주소가 저장되어 있기 때문에 특정 포트에만 데이터를 전송**(스위칭)합니다. 또한 **하나의 컴퓨터가 통신중이라도 데이터의 목적지로 구분이 되기 때문에
-다른 컴퓨터도 통신이 가능**합니다.
+반면에 `스위치`는 **2계층 헤더 정보를 읽고 특정 포트에만 데이터를 전송**(스위칭)합니다. 즉, MAC 주소를 보고 지정해서 전송합니다.
 
-(물론 장비가 처음 연결되거나 스위치를 재부팅하여 CAM 테이블에 MAC주소가 없다면 허브와 같은 방식으로 동작하여 MAC 주소를 저장합니다.)
+## Duplex
+
+허브와 스위치 모두 양방향 통신이 가능합니다. 하지만 중요한 차이점이 있습니다.
+
+`허브`는 각 포트가 모두 **`Half-Duplex`방식**입니다. 이것은 신호가 양방향으로 흐를 수 있지만, 동시에 양방향은 불가능합니다. 
+
+`스위치`는 각 포트가 모두 **`Full-Duplex`방식**입니다. 이것은 동시에 양방향으로 신호가 전송될 수 있습니다.
+
+(이론적으로 Full-Duplex 방식은 대역폭이 두 배로 늘어나는 효과가 있습니다.)
 
 ## BandWidth(대역폭)
 
@@ -21,25 +28,26 @@
 
 `스위치`는 **포트별로 독립된 대역폭**을 갖습니다. 위와 같은 예시에서 각 컴퓨터는 100Mbps의 대역폭을 할당받습니다. 
 
-## Duplex
-
-허브와 스위치 모두 양방향 통신이 가능합니다. 하지만 중요한 차이점이 있습니다.
-
-`허브`는 **`Half Duplex`방식**입니다. 이것은 양방향 통신은 가능하지만 **수신과 송신을 동시에 하지 못한다**는 단점이 있습니다. 
-
-`스위치`는 **`Full Duplex`방식**입니다. 이것은 양방향 통신은 물론 **동시에 수신과 송신이 가능**한 방식입니다.
-
-이론적으로 Full Duplex 방식은 대역폭이 두 배로 늘어나는 효과가 있습니다. 
-
 ## Collision
 
-`Collision`이란 **동시에 동일한 매체에게 데이터를 전송하여 발생하는 충돌**을 의미합니다. 충돌이 발생하면 신호 수신자는 발신자의 신호가 겹치고 손상되기 때문에 신호를 이해할 수 없게됩니다.
+`Collision`이란 **동시에 동일한 매체에게 데이터를 전송하여 발생하는 충돌**을 의미합니다. 
 
-`허브`의 경우 **하나의 링크를 공유하고 반이중 방식이기 때문에 충돌이 발생**할 수 있습니다. 그래서 허브는 대체로 CSMA/CD 방식으로 충돌을 감지하여 회비하는 방식으로 데이터를 처리합니다.
+무선(전파) 또는 유선(전기) 신호를 동시에 같은 미디어에게 전송할 때 그것이 충돌하여 신호가 깨지는 것을 의미합니다. 
 
-`스위치`의 경우 **링크를 공유하지 않고 전이중 방식이므로 충돌 발생이 불가능**합니다. 
+`허브`는 `Half-Duplex` 방식을 사용하면서 입력된 데이터를 복사하여 모든 포트로 전송한다고 했습니다.
 
-이해가 잘 되지 않는다면 다음 글을 참고하시기 바랍니다. [링크](https://community.cisco.com/t5/routing/does-collision-exists-in-switches/td-p/2603901)
+> 만약 허브에 연결된 컴퓨터들이 동시에 데이터를 전송하면 어떻게 될까요?
 
+![image](https://user-images.githubusercontent.com/53790137/151683765-c596b927-f67a-4ee3-94e9-47ecfc21c58f.png)
 
+1. PC1과 PC2에서 PC3에게 데이터를 보내기위해 동시에 Hub에 데이터를 보낸다.
+2. PC1의 데이터가 Hub에 먼저 도착하여 다른 모든 포트로 복사, 전송한다.
+3. 복사된 PC1의 데이터가 전송중인 PC2의 데이터와 충돌한다.
 
+Half-Duplex 방식이기 때문에 한 포트에서 양방향은 동시에 불가능합니다. 즉, 충돌이 발생합니다.
+
+이렇게 Half-Duplex로 연결되어 충돌이 발생할 수 있는 영역을 `Collision Domain`이라 합니다. 
+
+`스위치`의 모든 포트는 `Full-Duplex`로 동작합니다. 또한 이더넷 헤더(2계층 헤더)를 읽어서 보내기 때문에 Collision이 발생하지 않습니다. 
+
+(이해가 잘 되지 않는다면 다음 글을 참고하시기 바랍니다. [링크](https://community.cisco.com/t5/routing/does-collision-exists-in-switches/td-p/2603901))
